# DesignLab

./: .gitignore  CMakeLists.txt  README.md  bootstrap.cmake  designlab.json
SDK/: CMakeLists.txt  depends.code-workspace
SDK/config/: lv_conf.h
app/: CMakeLists.txt
app/src/: Application.cpp  Application.hpp  CMakeLists.txt  Canvas.hpp  Card.hpp  Elements.hpp  FileBrowser.cpp  FileBrowser.hpp  GuiObject.hpp  Home.cpp  Home.hpp  Icons.hpp  Navigation.hpp  Properties.hpp  Sl.cpp  Sl.hpp  Spacer.cpp  Spacer.hpp  Tools.hpp  Tree.hpp  assets.fs.assetfs  main.cpp  main.qml  qml.qrc
app/src/assetfs/: data.assetfs
app/src/controller/: AssetManager.cpp  ExportWorker.cpp  FontAwesomeManager.cpp  FontAwesomeManager.hpp  FontManager.cpp  FontManager.hpp  Manager.cpp  ThemeManager.cpp  ThemeManager.hpp  WorkerObject.cpp  WorkerObject.hpp
app/src/designlab/: CMakeLists.txt  fontawesome_brands_regular.c  fontawesome_regular.c  icon_fonts.h
app/src/designlab/assets/: CMakeLists.txt  assets.c
app/src/designlab/components/: MyComponent2.cpp  MyComponent2.hpp  ProgressBar.cpp  ProgressBar.hpp  SignupForm.cpp  SignupForm.hpp
app/src/designlab/fonts/: BootstrapIcons.hpp  CMakeLists.txt  FontAwesomeIcons.hpp  fonts.c  mont_r_12.c  mont_r_16.c  mont_r_20.c  mont_r_24.c  mont_r_28.c  mont_r_32.c  mont_r_36.c  mont_r_40.c  mont_r_44.c  mont_r_48.c  mont_r_52.c  mont_r_56.c  mont_regular_12.c  mont_regular_16.c  mont_regular_20.c  mont_regular_24.c  mont_regular_28.c  mont_regular_32.c  mont_regular_36.c  mont_regular_40.c  mont_regular_44.c  mont_regular_48.c  mont_regular_52.c  mont_regular_56.c  montserrat_i_16.c  montserrat_i_20.c  montserrat_i_36.c  montserrat_i_40.c  montserrat_i_48.c  montserrat_i_52.c  montserrat_i_8.c  montserrat_l_12.c  montserrat_l_20.c  montserrat_l_32.c  montserrat_l_36.c  montserrat_l_40.c  (+53 more)
app/src/designlab/themes/: CMakeLists.txt  default_dark_medium.c  default_light_medium.c  lvgl_small_dark.c  lvgl_small_light.c  themes.c  themes.h
app/src/extras/: Extras.cpp  Extras.hpp
app/src/fonts/: CMakeLists.txt  fonts.c  montserrat_i_12.c  montserrat_i_24.c  montserrat_i_28.c  montserrat_i_32.c  montserrat_i_44.c  montserrat_i_56.c  montserrat_i_60.c  montserrat_i_64.c  montserrat_i_68.c  montserrat_i_72.c  montserrat_l_16.c  montserrat_l_24.c  montserrat_l_28.c  montserrat_l_44.c  montserrat_l_48.c  montserrat_l_52.c  montserrat_l_64.c  montserrat_l_68.c  montserrat_r_12.c  montserrat_r_16.c  montserrat_r_20.c  montserrat_r_24.c  montserrat_r_28.c  montserrat_r_32.c  montserrat_r_36.c  montserrat_r_44.c  montserrat_r_48.c  montserrat_r_52.c  montserrat_r_56.c  montserrat_r_68.c  montserrat_r_72.c  montserrat_r_8.c  montserrat_sb_12.c  montserrat_sb_16.c  montserrat_sb_20.c  montserrat_sb_24.c  montserrat_sb_28.c  montserrat_sb_32.c  (+16 more)
app/src/logic/: AssetManager.cpp  AssetManager.hpp  BootstrapIconManager.cpp  BootstrapIconManager.hpp  CodePrinter.hpp  ComponentManager.cpp  ComponentManager.hpp  ExportWork.cpp  ExportWork.hpp  ExportWorker.cpp  ExportWorker.hpp  FontAwesomeManager.hpp  FontManager.cpp  FontManager.hpp  LvglFontGenerator.cpp  LvglFontGenerator.hpp  Manager.cpp  Manager.hpp  Settings.hpp  StringPrinter.hpp  ThemeGenerator.cpp  ThemeGenerator.hpp  ThemeManager.cpp  ThemeManager.hpp  Work.hpp  WorkerObject.hpp
app/src/model/: Model.hpp  Settings.cpp  Settings.hpp
app/src/screens/: AssetMaker.cpp  AssetMaker.hpp  FontMaker.cpp  FontMaker.hpp  Home.cpp  Home.hpp  IconMaker.cpp  IconMaker.hpp  Maker.hpp  Project.cpp  Project.hpp  ScreenObject.hpp  ThemeMaker.cpp  ThemeMaker.hpp  ThemePreview.cpp  ThemePreview.hpp
app/src/themes/: CMakeLists.txt  lvgl_small_dark.c  lvgl_small_light.c  themes.h
app/src/view/: About.cpp  About.hpp  AssetMaker.cpp  AssetMaker.hpp  Builder.cpp  Builder.hpp  ColorPreview.cpp  ColorPreview.hpp  ComponentMaker.cpp  ComponentMaker.hpp  Editor.cpp  Editor.hpp  ExportModal.cpp  ExportModal.hpp  FontMaker.cpp  FontMaker.hpp  GettingStarted.cpp  GettingStarted.hpp  Home.cpp  Home.hpp  IconMaker.cpp  IconMaker.hpp  Maker.cpp  Maker.hpp  Project.cpp  Project.hpp  ThemeMaker.cpp  ThemeMaker.hpp  ThemePreview.cpp  ThemePreview.hpp  ViewObject.hpp
app/src/view/extras/: AddComponent.cpp  AddComponent.hpp  BuilderTools.cpp  BuilderTools.hpp  ComponentTree.cpp  ComponentTree.hpp  EditComponent.cpp  EditComponent.hpp  Extras.cpp  Extras.hpp  PropertyEditor.cpp  PropertyEditor.hpp
app/src/worker/: ExportWorker.cpp  ExportWorker.hpp  WorkerObject.cpp  WorkerObject.hpp
assets/: colors-dark.json  colors-light.json  dark-colors.json  dark.json  fonts-small.json  lvgl-rules.json  lvgl-small-dark.json  lvgl-small-light.json  lvgl-style.json  lvgl-styles.json  rules-lvgl.json  sizes-small.json  small-fonts.json  small-sizes.json  styles-lvgl.json
designlab/: CMakeLists.txt
designlab/assets/: designlab.json  icon.drawio  icon.icns
designlab/components/: MyComponent2.cpp  MyComponent2.hpp
designlab/fonts/: montserrat_r_12.c  montserrat_r_28.c  montserrat_r_32.c  montserrat_r_36.c  montserrat_sb_12.c  montserrat_sb_28.c  montserrat_sb_36.c  montserrat_sb_44.c  montserrat_sb_52.c  montserrat_sb_60.c  sourcecode_r_12.c  sourcecode_r_16.c  sourcecode_r_20.c
designlab/themes/: colors-dark.json  colors-light.json  rules-lvgl.json  sizes-small.json  styles-lvgl.json
